page-consultas-responsive

--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -58,7 +58,7 @@
                                 <p>
                                     Mensaje
                                 </p>
-                                <textarea cols="30" rows="10"></textarea>
+                                <textarea class="textArea" cols="30" rows="15"></textarea>
                             </div>
                             <a class="submit" href="#">
                                 Enviar
