--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -33,7 +33,7 @@
             <div class="responsive-container-block bigContainer">
                 <div class="responsive-container-block Container">
                     <div class="responsive-cell-block S">
-                        <img class="mainImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/mp35.svg">
+                        <img class="mainImg" src="../assets/img/consultas/Screenshot_2.png">
                     </div>
                     <div class="responsive-cell-block M">
                         <p class="titulo-caja descripcion">
@@ -81,10 +81,10 @@
             <div class="ayuda">
                 <ul>
                     <h2>¿Necesitas Ayuda?</h2>    
-                    <li><a href="">FAQ</a></li>
+                    <li><a href="../pages/error404.html">FAQ</a></li>
                     <li><a href="../pages/consultas.html">Consultas</a></li>
-                    <li><a href="">Boton de Arrepentimiento</a></li>
-                    <li><a href="">Cambios & Devoluciones</a></li>
+                    <li><a href="../pages/error404.html">Boton de Arrepentimiento</a></li>
+                    <li><a href="../pages/error404.html">Cambios & Devoluciones</a></li>
                 </ul>
             </div>
             <div class="info">
@@ -92,7 +92,7 @@
                     <h2>Mas Info</h2>
                     <li><a href="../pages/nosotros.html">Nosotros</a></li>
                     <li><a href="../pages/sucursales.html">Sucursales</a></li>
-                    <li><a href="">Trabaja con Nosotros</a></li>
+                    <li><a href="../pages/consultas.html">Trabaja con Nosotros</a></li>
                     </ul>
                 </div>            
             <div class="redes">
