--- a/pages/error404.html
+++ b/pages/error404.html
@@ -3,13 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="locales, sucursales, horarios de atencion, dias abiertos">
-    <meta name="author" content="Ro.K">
-    <meta name="copyrigth" content="Wish BsAs">
-    <meta property="og:title" content="Wish BsAs">
-    <meta property="og:url" content=www.wishbsas.com.ar>
-    <meta property="og:description" content="Sucursales| WishBsas">
-    <title>Sucursales | WishBsas</title>
+    <title>Page Not Found | WishBsas</title>
     <link rel="shortcut icon" href="../assets/img/header/Color logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -29,33 +23,21 @@
         </nav>
     </header>
     <main>
-        <section class="sucursales">
-            <H1>SUCURSALES</H1>
-            <div class="aranguren">
-                <h2>Aranguren 3112, CABA</h2>
-                <h3>Horarios de atencion:</h3>
-                <p>
-                    <li>Lunes a Viernes de 8:00hs a 17:00hs</li>
-                    <li>Sabados de 8:00hs a 13:00hs</li>
-                </p>
-                <div class="maparanguren">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.134423845758!2d-58.47765882256251!3d-34.62604315868044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9929a880e19%3A0xb8fba3d1810be8f5!2sDr.%20Juan%20Felipe%20Aranguren%203112%2C%20C1406FXH%20CABA!5e0!3m2!1ses-419!2sar!4v1693502881370!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+        <section class="error404">
+            <h1>404</h1>
+            <h2>Parece que algo nos falta...</h2>
+            <div class="errorImg">
+                <img src="../assets/img/error/error-img.png" alt="">
             </div>
-            <div class="campana">
-                <h2>Campana 621, CABA</h2>
-                <h3>Horarios de atencion:</h3>
-                <p>
-                    <li>Lunes a Viernes de 8:30hs a 17:00hs</li>
-                    <li>Sabados de 8:30hs a 13:00hs</li>
-                </p>
-                <div class="mapcampana">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.1673069248277!2d-58.47756340000002!3d-34.625212099999985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9932b993917%3A0x41896634df3d4e0a!2sCampana%20621%2C%20C1406%20CABA!5e0!3m2!1ses-419!2sar!4v1693503612259!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+            <div>
+                <ul>
+                    <h3>Tenemos links que te pueden ayudar</h3>
+                    <div>
+                        <li><a href="../index.html">Pagina de Inicio</a></li>
+                        <li><a href="./consultas.html">Pagina de Consultas</a></li>
+                    </div>
+                </ul>
             </div>
-        </section>
-        <section>
-            <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
         </section>
     </main>
     <footer>
