--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -52,10 +52,10 @@
             <div class="ayuda">
                 <ul>
                     <h2>¿Necesitas Ayuda?</h2>    
-                    <li><a href="">FAQ</a></li>
+                    <li><a href="../pages/error404.html">FAQ</a></li>
                     <li><a href="../pages/consultas.html">Consultas</a></li>
-                    <li><a href="">Boton de Arrepentimiento</a></li>
-                    <li><a href="">Cambios & Devoluciones</a></li>
+                    <li><a href="../pages/error404.html">Boton de Arrepentimiento</a></li>
+                    <li><a href="../pages/error404.html">Cambios & Devoluciones</a></li>
                 </ul>
             </div>
             <div class="info">
@@ -63,7 +63,7 @@
                     <h2>Mas Info</h2>
                     <li><a href="../pages/nosotros.html">Nosotros</a></li>
                     <li><a href="../pages/sucursales.html">Sucursales</a></li>
-                    <li><a href="">Trabaja con Nosotros</a></li>
+                    <li><a href="../pages/error404.html">Trabaja con Nosotros</a></li>
                     </ul>
                 </div>            
             <div class="redes">
