--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
             <div class="ayudaI">
                 <ul>
                     <h2>¿Necesitas Ayuda?</h2>    
-                    <li><a href="">FAQ</a></li>
+                    <li><a href="./pages/error404.html">FAQ</a></li>
                     <li><a href="./pages/consultas.html">Consultas</a></li>
-                    <li><a href="">Boton de Arrepentimiento</a></li>
-                    <li><a href="">Cambios & Devoluciones</a></li>
+                    <li><a href="./pages/error404.html">Boton de Arrepentimiento</a></li>
+                    <li><a href="./pages/error404.html">Cambios & Devoluciones</a></li>
                 </ul>
             </div>
             <div class="infoI">
@@ -120,7 +120,7 @@
                     <h2>Mas Info</h2>
                     <li><a href="./pages/nosotros.html">Nosotros</a></li>
                     <li><a href="./pages/sucursales.html">Sucursales</a></li>
-                    <li><a href="">Trabaja con Nosotros</a></li>
+                    <li><a href="./pages/error404.html">Trabaja con Nosotros</a></li>
                 </ul>
                 </div>            
             <div class="redesI">
