--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,7 +61,7 @@
             <div class="info">
                 <ul>    
                     <h2>Mas Info</h2>
-                    <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                    <li><a href="#">Nosotros</a></li>
                     <li><a href="../pages/sucursales.html">Sucursales</a></li>
                     <li><a href="../pages/error404.html">Trabaja con Nosotros</a></li>
                     </ul>
