--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -82,7 +82,7 @@
                 <ul>
                     <h2>¿Necesitas Ayuda?</h2>    
                     <li><a href="../pages/error404.html">FAQ</a></li>
-                    <li><a href="../pages/consultas.html">Consultas</a></li>
+                    <li><a href="#">Consultas</a></li>
                     <li><a href="../pages/error404.html">Boton de Arrepentimiento</a></li>
                     <li><a href="../pages/error404.html">Cambios & Devoluciones</a></li>
                 </ul>
@@ -92,7 +92,7 @@
                     <h2>Mas Info</h2>
                     <li><a href="../pages/nosotros.html">Nosotros</a></li>
                     <li><a href="../pages/sucursales.html">Sucursales</a></li>
-                    <li><a href="../pages/consultas.html">Trabaja con Nosotros</a></li>
+                    <li><a href="../pages/error404.html">Trabaja con Nosotros</a></li>
                     </ul>
                 </div>            
             <div class="redes">
