--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -73,7 +73,7 @@
                 <ul>    
                     <h2>Mas Info</h2>
                     <li><a href="../pages/nosotros.html">Nosotros</a></li>
-                    <li><a href="../pages/sucursales.html">Sucursales</a></li>
+                    <li><a href="#">Sucursales</a></li>
                     <li><a href="../pages/error404.html">Trabaja con Nosotros</a></li>
                     </ul>
                 </div>            
