--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
     <main>
         <section>
             <article class="portada">
-                <h1 class="text-focus-in">TEMPORADA OTOÑO INVIERNO</h1>
-                <img src="./assets/img/portada.jpg" alt="Portada">
-                <button class="buttonPrincipal">ver todo</button>
+                <img src="./assets/img/portada.png" alt="Portada">
             </article>
         </section>
         <section>
@@ -47,7 +45,7 @@
                 <article class="categoria1a">
                     <li><a href="./pages/remeras.html"><img src="./assets/img/indexbody/categoriaa/categoria1a.jpg" alt=""></a></li>
                 </article>
-                <button><a href="./pages/remeras.html">Remeras</a></button>
+                <button class="buttonPrincipal"><a href="./pages/remeras.html">Remeras</a></button>
                 <article class="categoria1b">
                         <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b1.jpg" alt=""></a></li>
                         <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b2.jpg" alt=""></a></li>
