--- a/index.html
+++ b/index.html
@@ -43,57 +43,57 @@
         <section>
             <div class="categoria1">
                 <article class="categoria1a">
-                    <li><a href="./pages/remeras.html"><img src="./assets/img/indexbody/categoriaa/categoria1a.jpg" alt=""></a></li>
+                    <li><img src="./assets/img/indexbody/categoriaa/categoria1a.jpg" alt=""></li>
                 </article>
                 <button class="buttonPrincipal"><a href="./pages/remeras.html">Remeras</a></button>
                 <article class="categoria1b">
-                        <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b1.jpg" alt=""></a></li>
-                        <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b2.jpg" alt=""></a></li>
-                        <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b3.jpg" alt=""></a></li>
-                        <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b4.jpg" alt=""></a></li>
-                        <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b5.jpg" alt=""></a></li>
-                        <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria1b6.jpg" alt=""></a></li>
+                        <li><img src="./assets/img/indexbody/categoriab/categoria1b1.jpg" alt=""></li>
+                        <li><img src="./assets/img/indexbody/categoriab/categoria1b2.jpg" alt=""></li>
+                        <li><img src="./assets/img/indexbody/categoriab/categoria1b3.jpg" alt=""></li>
+                        <li><img src="./assets/img/indexbody/categoriab/categoria1b4.jpg" alt=""></li>
+                        <li><img src="./assets/img/indexbody/categoriab/categoria1b5.jpg" alt=""></li>
+                        <li><img src="./assets/img/indexbody/categoriab/categoria1b6.jpg" alt=""></li>
                 </article>
             </div>
             <div class="categoria2">
                 <article class="categoria2b">
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria2b1.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria2b2.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria2b3.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria2b4.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria2b5.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria2b6.jpg" alt=""></a></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria2b1.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria2b2.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria2b3.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria2b4.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria2b5.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria2b6.jpg" alt=""></li>
                 </article>
                 <article class="categoria2a">
-                    <li><a href="./pages/pantalones.html"><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt=""></a></li>
+                    <li><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt=""></li>
                 </article>
                 <button><a href="./pages/pantalones.html">Pantalones</a></button>
             </div>
             <div class="categoria3">
                 <article class="categoria3a">
-                    <li><a href="./pages/sweater&buzos.html"><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt=""></a></li>
+                    <li><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt=""></li>
                 </article>
-                <button><a href="./pages/sweater&buzos.html">Sweater&Buzos</a></button>
+                <button><a href="./pages/sweater&buzos.html">Sweater &<br/>Buzos</a></button>
                 <article class="categoria3b">
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b1.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b2.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b3.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b4.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b5.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria3b6.jpg" alt=""></a></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria3b1.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria3b2.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria3b3.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria3b4.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria3b5.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria3b6.jpg" alt=""></li>
                 </article>
             </div>
             <div class="categoria4">
                 <article class="categoria4b">
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria4b1.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria4b2.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria4b3.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria4b4.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria4b5.jpg" alt=""></a></li>
-                    <li><a href=""><img src="./assets/img/indexbody/categoriab/categoria4b6.jpg" alt=""></a></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria4b1.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria4b2.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria4b3.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria4b4.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria4b5.jpg" alt=""></li>
+                    <li><img src="./assets/img/indexbody/categoriab/categoria4b6.jpg" alt=""></li>
                 </article>
                 <article class="categoria4a">
-                    <li><a href="./pages/camperas.html"><img src="./assets/img/indexbody/categoriaa/categoria4a.jpg" alt=""></a></li>
+                    <li><img src="./assets/img/indexbody/categoriaa/categoria4a.jpg" alt=""></li>
                 </article>
                 <button><a href="./pages/camperas.html">Camperas</a></button>
             </div>
