--- a/pages/error404.html
+++ b/pages/error404.html
@@ -25,7 +25,7 @@
     <main>
         <section class="error404">
             <h1>404</h1>
-            <h2>Parece que algo nos falta...</h2>
+            <h2>Opps Parece que nos falta algo...</h2>
             <div class="errorImg">
                 <img src="../assets/img/error/error-img.png" alt="">
             </div>
