--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -30,12 +30,12 @@
     </header>
     <main>
         <div class="consultas">
-            <div class="responsive-container-block bigContainer">
-                <div class="responsive-container-block Container">
-                    <div class="responsive-cell-block S">
+            <div class="container-block bigContainer">
+                <div class="container-block Container">
+                    <div class="cell-block S">
                         <img class="mainImg" src="../assets/img/consultas/Screenshot_2.png">
                     </div>
-                    <div class="responsive-cell-block M">
+                    <div class="cell-block M">
                         <p class="titulo-caja descripcion">
                             Contactanos
                         </p>
