--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
         <section>
             <div class="categoria1">
                 <article class="categoria1a">
-                    <li><img src="./assets/img/indexbody/categoriaa/categoria1a.jpg" alt=""></li>
+                    <li><a href="./pages/remeras.html"><img src="./assets/img/indexbody/categoriaa/categoria1a.jpg" alt=""></a></li>
                 </article>
-                <button class="buttonPrincipal"><a href="./pages/remeras.html">Remeras</a></button>
                 <article class="categoria1b">
                         <li><img src="./assets/img/indexbody/categoriab/categoria1b1.jpg" alt=""></li>
                         <li><img src="./assets/img/indexbody/categoriab/categoria1b2.jpg" alt=""></li>
@@ -65,15 +64,13 @@
                     <li><img src="./assets/img/indexbody/categoriab/categoria2b6.jpg" alt=""></li>
                 </article>
                 <article class="categoria2a">
-                    <li><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt=""></li>
+                    <li><a href="./pages/pantalones.html"><img src="./assets/img/indexbody/categoriaa/categoria2a.jpg" alt=""></a></li>
                 </article>
-                <button><a href="./pages/pantalones.html">Pantalones</a></button>
             </div>
             <div class="categoria3">
                 <article class="categoria3a">
-                    <li><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt=""></li>
+                    <li><a href="./pages/sweater&buzos.html"><img src="./assets/img/indexbody/categoriaa/categoria3a.jpg" alt=""></a></li>
                 </article>
-                <button><a href="./pages/sweater&buzos.html">Sweater &<br/>Buzos</a></button>
                 <article class="categoria3b">
                     <li><img src="./assets/img/indexbody/categoriab/categoria3b1.jpg" alt=""></li>
                     <li><img src="./assets/img/indexbody/categoriab/categoria3b2.jpg" alt=""></li>
@@ -93,7 +90,7 @@
                     <li><img src="./assets/img/indexbody/categoriab/categoria4b6.jpg" alt=""></li>
                 </article>
                 <article class="categoria4a">
-                    <li><img src="./assets/img/indexbody/categoriaa/categoria4a.jpg" alt=""></li>
+                    <li><a href="./pages/camperas.html"><img src="./assets/img/indexbody/categoriaa/categoria4a.jpg" alt=""></a></li>
                 </article>
                 <button><a href="./pages/camperas.html">Camperas</a></button>
             </div>
