--- a/index.html
+++ b/index.html
@@ -18,26 +18,24 @@
 <body>
 
     <header>
-        <nav>
-            <div>
-                <ul class="navtop">
-                    <li><img src="./assets/img/header/Color logo.png" alt="logo-inicio"></li>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Categorias
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="./pages/remeras.html">Remeras</a></li>
-                            <li><a class="dropdown-item" href="./pages/pantalones.html">Pantalones</a></li>
-                            <li><a class="dropdown-item" href="./pages/sweater&buzos.html">Sweaters & Buzos</a></li>
-                            <li><a class="dropdown-item" href="./pages/camperas.html">Camperas</a></li>
-                        </ul>
-                    </div>
-    </header>
+        <header>
+            <nav>
+                <div>
+                    <ul class="navtop">
+                        <li><img src="./assets/img/header/Color logo.png" alt="logo-inicio"></li>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="./pages/remeras.html">Remeras</a></li>
+                        <li><a href="./pages/pantalones.html">Pantalones</a></li>
+                        <li><a href="./pages/sweater&buzos.html">Sweater&Buzos</a></li>
+                        <li><a href="./pages/camperas.html">Camperas</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
     <main>
         <section>
             <article class="portada">
-                <img src="./assets/img/portada.png" alt="Portada">
+                <img class="img-slideIn" src="./assets/img/portada.png" alt="Portada">
             </article>
         </section>
         <section>
