--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </header>
     <main>
         <section>
-            <article class="portada">
+            <div class="portada">
                 <img class="img-slideIn" src="./assets/img/portada.png" alt="Portada">
-            </article>
+            </div>
         </section>
         <section>
             <div class="categoria1">
@@ -92,9 +92,9 @@
                 </article>
             </div>
         </section>
-        <section>
+        <div>
             <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="./assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
-        </section>
+        </div>
     </main>
     <footer>
         <nav class="navbottomI">
