--- a/pages/error404.html
+++ b/pages/error404.html
@@ -39,6 +39,9 @@
                 </ul>
             </div>
         </section>
+        <div>
+            <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
+        </div>
     </main>
     <footer>
         <nav class="navbottom">
