--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -31,21 +31,18 @@
     <main>
         <section class="nosotros">
             <h1>NOSOTROS</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi soluta deserunt ipsum commodi, mollitia culpa saepe dignissimos necessitatibus molestiae nesciunt dolorem, rem voluptates doloremque accusamus repudiandae cupiditate beatae distinctio molestias?
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta laudantium quia aliquid, qui aspernatur ex magnam nisi? Dolor accusantium earum ipsa modi ab provident velit sunt sed, aspernatur voluptates porro?
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sit, in aliquam rerum quidem quas natus explicabo temporibus molestias similique beatae nulla deserunt totam vero! Nesciunt quae unde placeat vel!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi aspernatur dolorum, ipsum inventore enim maxime consectetur molestias? Repellat error, enim autem nihil distinctio veritatis magni, nostrum fuga impedit molestiae deleniti.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et reprehenderit ducimus cum sit officiis aspernatur, porro voluptatem nobis debitis a praesentium dolorum sed libero quidem! Velit cupiditate iusto expedita impedit.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores itaque veritatis corrupti officia obcaecati nam, quam, voluptate animi hic eligendi odio cumque delectus ullam. Cumque accusamus asperiores similique maxime aliquam.
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab non alias sequi est at maiores mollitia veritatis accusamus a dolore facere pariatur in deleniti quo quos molestiae, corporis voluptatum nam?
+            <p>Somos Wish BsAs, y buscamos que la moda, la calidad y el precio se combinen para crear una marca de ropa para mujer mayorista que no pasa desapercibida. Desde 2012,nos hemos dedicado al diseño y la fabricación de indumentaria femenina buscando la mejor relación precio-calidad en Buenos Aires. Nos enorgullece ofrecer prendas únicas que reflejan la personalidad y el estilo de la mujer actual. 
+                <br>Nuestra ropa está diseñada para la mujer moderna, activa y segura de sí misma. Buscamos brindar un estilo urbano, simple y moderno, que se adapte a cualquier ocasión. <br>Mantenemos nuestra política de calidad, precio y diseño, lo que nos ha permitido seguir creciendo de manera continua. Esto significa que nuestros clientes pueden estar seguros de que siempre ofrecemos prendas de calidad, a precios justos y con un diseño que refleja las últimas tendencias. 
+                <br>Somos una empresa de venta mayorista y nos enorgullece proporcionar a nuestros clientes una atención rápida y efectiva. Sabemos lo importante que es para ellos recibir sus pedidos consolidados a tiempo, por lo que nos comprometemos a garantizar una entrega rápida y confiable en todo el país. 
+                <br>En resumen, nos enorgullece ser una marca de ropa para mujer reconocida en nuestro segmento, gracias a nuestra calidad, diseño y compromiso constante con nuestros clientes. Ofrecemos prendas únicas que reflejan la personalidad y el estilo de la mujer moderna y activa, brindándoles la comodidad y elegancia que merecen.
             </p>
         </section>
-        <section>
+        <div>
             <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
-        </section>
-        <section class="videocorp">
+        </div>
+        <div class="videocorp">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/wU8JWcicx9o?si=TC-9ppuUADfsobOq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </section>
+        </div>
     </main>
     <footer>
         <nav class="navbottom">
