--- a/pages/pantalones.html
+++ b/pages/pantalones.html
@@ -30,15 +30,15 @@
     </header>
     <main>
         <section>
-            <article class="mainCategoria">
+            <div class="mainCategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/pantalones/categorias/ver-todo.jpg" alt=""></a>ver todo</li>
                     <li class="cat1"><a href=""><img src="../assets/img/pantalones/categorias/largo.jpg" alt=""></a>largos</li>
                     <li class="cat2"><a href=""><img src="../assets/img/pantalones/categorias/estampado.jpg" alt=""></a>estampado</li>
                     <li class="cat3"><a href=""><img src="../assets/img/pantalones/categorias/liso.jpg" alt=""></a>liso</li>
                     <li class="cat4"><a href=""><img src="../assets/img/pantalones/categorias/corto.jpg" alt=""></a>corto</li>
                     <li class="cat5"><a href=""><img src="../assets/img/pantalones/categorias/calza.jpg" alt=""></a>calzas</li>
-            </article>
-            <article class="listaArticulos">
+            </div>
+            <div class="listaArticulos">
                     <div>
                         <li><a href=""></a><img src="../assets/img/pantalones/main/palazo-crepe.jpg" alt=""></li>
                         <p>$700 Palazo Crepe<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
@@ -83,11 +83,11 @@
                         <li><a href=""></a><img src="../assets/img/pantalones/main/short-morley.jpg" alt=""></li>
                         <p>$700 Short Lino<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
-            </article>
+            </div>
         </section>
-        <section>
+        <div>
             <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
-        </section>
+        </div>
     </main>
     <footer>
         <nav class="navbottom">
