--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -30,15 +30,15 @@
     </header>
     <main>
         <section>
-            <article class="mainCategoria">
+            <div class="mainCategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/remeras/categorias/ver todo.jpg" alt=""></a>ver todo</li>
                     <li class="cat1"><a href=""><img src="../assets/img/remeras/categorias/manga-corta.jpg" alt=""></a>manga corta</li>
                     <li class="cat2"><a href=""><img src="../assets/img/remeras/categorias/manga-larga.jpg" alt=""></a>manga larga</li>
                     <li class="cat3"><a href=""><img src="../assets/img/remeras/categorias/bordado.jpg" alt=""></a>bordado</li>
                     <li class="cat4"><a href=""><img src="../assets/img/remeras/categorias/estampado.jpg" alt=""></a>estampado</li>
                     <li class="cat5"><a href=""><img src="../assets/img/remeras/categorias/liso.jpg" alt=""></a>liso</li>
-            </article>
-            <article class="listaArticulos">
+            </div>
+            <div class="listaArticulos">
                     <div>
                         <li><a href=""></a><img src="../assets/img/remeras/main/remera-lisa-escote-redondo.jpg" alt=""></li>
                         <p>$500 Remera Lisa Escote Redondo <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
@@ -88,11 +88,11 @@
                         <p>$500 Remera Bordada Manga <button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                         
                     </div>
-            </article>
+            </div>
         </section>
-        <section>
+        <div>
             <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
-        </section>
+        </div>
     </main>
     <footer>
         <nav class="navbottom">
