--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -40,6 +40,7 @@
                 </p>
                 <div class="maparanguren">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.134423845758!2d-58.47765882256251!3d-34.62604315868044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9929a880e19%3A0xb8fba3d1810be8f5!2sDr.%20Juan%20Felipe%20Aranguren%203112%2C%20C1406FXH%20CABA!5e0!3m2!1ses-419!2sar!4v1693502881370!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <img src="../assets/img/sucursales/Aranguren.jpeg" alt="">
                 </div>
             </div>
             <div class="campana">
@@ -51,12 +52,13 @@
                 </p>
                 <div class="mapcampana">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.1673069248277!2d-58.47756340000002!3d-34.625212099999985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9932b993917%3A0x41896634df3d4e0a!2sCampana%20621%2C%20C1406%20CABA!5e0!3m2!1ses-419!2sar!4v1693503612259!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <img src="../assets/img/sucursales/Campana.jpg" alt="">
                 </div>
             </div>
         </section>
-        <section>
+        <div>
             <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
-        </section>
+        </div>
     </main>
     <footer>
         <nav class="navbottom">
