--- a/pages/sweater&buzos.html
+++ b/pages/sweater&buzos.html
@@ -30,15 +30,15 @@
     </header>
     <main>
         <section>
-            <article class="mainCategoria">
+            <div class="mainCategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/sweater-buzos/categorias/ver-todo.jpg" alt=""></a>ver todo</li>
                     <li class="cat1"><a href=""><img src="../assets/img/sweater-buzos/categorias/liso.jpg" alt=""></a>lisos</li>
                     <li class="cat2"><a href=""><img src="../assets/img/sweater-buzos/categorias/bordados.jpg" alt=""></a>bordados</li>
                     <li class="cat3"><a href=""><img src="../assets/img/sweater-buzos/categorias/buzos.jpg" alt=""></a>buzos</li>
                     <li class="cat4"><a href=""><img src="../assets/img/sweater-buzos/categorias/estampados.jpg" alt=""></a>estampados</li>
                     <li class="cat5"><a href=""><img src="../assets/img/sweater-buzos/categorias/sweater.jpg" alt=""></a>sweaters</li>
-            </article>
-            <article class="listaArticulos">
+            </div>
+            <div class="listaArticulos">
                     <div>
                         <li><a href=""></a><img src="../assets/img/sweater-buzos/main/buz-cartera-botones.jpg" alt=""></li>
                         <p>$900 Buzo Cartera Botones<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
@@ -83,11 +83,11 @@
                         <li><a href=""></a><img src="../assets/img/sweater-buzos/main/swetaer-botones.jpg" alt=""></li>
                         <p>$900 Sweater Botones<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
-            </article>
+            </div>
         </section>
-        <section>
+        <div>
             <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
-        </section>
+        </div>
     </main>
     <footer>
         <nav class="navbottom">
