--- a/pages/camperas.html
+++ b/pages/camperas.html
@@ -30,15 +30,15 @@
     </header>
     <main>
         <section>
-            <article class="mainCategoria">
+            <div class="mainCategoria">
                     <li class="vertodo"><a href=""><img src="../assets/img/camperas/categorias/ver-todo.jpg" alt=""></a>ver todo</li>
                     <li class="cat1"><a href=""><img src="../assets/img/camperas/categorias/deportivo.jpg" alt=""></a>deportivos</li>
                     <li class="cat2"><a href=""><img src="../assets/img/camperas/categorias/inflado.jpg" alt=""></a>inflados</li>
                     <li class="cat3"><a href=""><img src="../assets/img/camperas/categorias/lisos.jpg" alt=""></a>lisos</li>
                     <li class="cat4"><a href=""><img src="../assets/img/camperas/categorias/sacos.jpg" alt=""></a>sacos</li>
                     <li class="cat5"><a href=""><img src="../assets/img/camperas/categorias/cuero.jpg" alt=""></a>cuero</li>
-            </article>
-            <article class="listaArticulos">
+            </div>
+            <div class="listaArticulos">
                     <div>
                         <li><a href=""></a><img src="../assets/img/camperas/main/bomber-rustico-bordado.jpg" alt=""></li>
                         <p>$1500 Bomber Bordado<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
@@ -83,11 +83,11 @@
                         <li><a href=""></a><img src="../assets/img/camperas/main/saco-rustico.jpg" alt=""></li>
                         <p>$1500 Saco Rustico<button><img src="../assets/img/favoritosdesmarcado.png" alt=""></button></p>
                     </div>
-            </article>
+                </div>
         </section>
-        <section>
+        <div>
             <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
-        </section>
+        </div>
     </main>
     <footer>
         <nav class="navbottom">
