--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -72,9 +72,9 @@
                 </div>
             </div>
         </div>
-        <section>
+        <div>
             <a class="whatsapp" href="https://wa.me/541168814857" target="_blank" ><img src="../assets/img/indexbody/iconos/whatsapp.png" alt=""></a>
-        </section>
+        </div>
     </main>
     <footer>
         <nav class="navbottom">
