--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="wish, wishbsas, mayorista, zona, flores, avenida, avellaneda, indumentaria, femenina, ropa, mujer, mayor, reventa">
+    <meta name="keywords" content="wish, wishbsas, mayorista, flores, avellaneda, indumentaria, femenina, ropa, mujer, reventa, comprar">
     <meta name="description" content="Fabricacion y venta mayorista de Indumentaria Femenina, especializados en remeras basicas, bordadas, estampadas y detalles">
     <meta name="author" content="Ro.K">
     <meta name="copyrigth" content="Wish BsAs">
