--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="#">Inicio</a></li>
                         <li><a href="./pages/remeras.html">Remeras</a></li>
                         <li><a href="./pages/pantalones.html">Pantalones</a></li>
-                        <li><a href="./pages/sweater&buzos.html">Sweater&Buzos</a></li>
+                        <li><a href="./pages/sweater&buzos.html">Sweaters&Buzos</a></li>
                         <li><a href="./pages/camperas.html">Camperas</a></li>
                     </ul>
                 </div>
